@@ -176,9 +176,9 @@ function updateFast()
 updateSlow();
 updateMinute();
 updateFast();
-setInterval(updateSlow, 120000);
+setInterval(updateSlow, 180000);
 setInterval(updateMinute, 60000);
-setInterval(updateFast, 2000);
+setInterval(updateFast, 5000);
 		</script>
 	</body>
 </html>
